# boltffi

./: .gitignore  BOLTFFI_TOML_SPEC.md  Cargo.toml  README.md  RIFF_TOML_SPEC.md  cbindgen.toml  plan.md
.github/workflows/: ci.yml  release.yml
benchmarks/rust-boltffi/: boltffi.toml
benchmarks/wasm-bench/: bench.mjs
boltffi/: Cargo.toml
boltffi/src/: lib.rs
boltffi/tests/: facade_smoke.rs
boltffi_ast/src/: callable.rs
boltffi_bindgen/: Cargo.toml
boltffi_bindgen/src/: lib.rs
boltffi_binding/: Cargo.toml
boltffi_binding/src/: lib.rs
boltffi_cli/: Cargo.toml
boltffi_cli/src/: config.rs  error.rs  main.rs  target.rs
boltffi_core/: Cargo.toml
boltffi_core/src/: lib.rs  passable.rs  rustfuture.rs
boltffi_core/templates/: atomics.h
boltffi_core/tests/: wire_records.rs
boltffi_ffi_rules/: Cargo.toml
boltffi_ffi_rules/src/: lib.rs
boltffi_macros/: Cargo.toml
boltffi_macros/src/: callback_trait.rs  class.rs  custom_ffi.rs  custom_type.rs  custom_types.rs  data.rs  data_types.rs  export.rs  lib.rs  method_common.rs  params.rs  returns.rs  safety.rs  util.rs  wire_gen.rs
boltffi_tests/: Cargo.toml
boltffi_tests/src/: lib.rs
boltffi_tests/tests/: async_cancellation.rs  callback_traits.rs  error_propagation.rs  record_methods.rs  streams.rs
boltffi_verify/: Cargo.toml
docs/: package-lock.json  package.json
mobiFFI_build/: Cargo.toml
mobiFFI_core/: Cargo.toml  build.rs
scripts/: install_and_update_boltffi_locally.sh  install_and_update_riff_locally.sh
swift_test/: Generated.swift  mobiFFI_core.h  test.swift  test_ffi
(+408 files in other folders)
