[workspace]
resolver = "3"
members = ["boltffi", "boltffi_core", "boltffi_macros", "boltffi_bindgen", "boltffi_cli", "boltffi_ffi_rules", "boltffi_verify", "boltffi_tests"]
exclude = ["bench_demo/rust-boltffi", "bench_demo/rust-uniffi"]

[workspace.package]
license = "MIT"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
not_unsafe_ptr_arg_deref = "allow"
missing_safety_doc = "allow"
